--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ h1 {
 .gamer-tools {
 }
 
-.letter{
+.letter {
   text-transform: uppercase;
   cursor: pointer;
 }
@@ -85,7 +85,7 @@ h1 {
 }
 
 .gallows div {
-  /* display: none; */
+  display: none;
 }
 
 #kran {
@@ -135,7 +135,7 @@ h1 {
   right: 348px;
 }
 
-#left-arm{
+#left-arm {
   height: 80px;
   border: 2px solid black;
   position: absolute;
@@ -153,11 +153,35 @@ h1 {
   right: 281px;
 }
 
-#right-arm{
+#right-arm {
   height: 80px;
   border: 2px solid black;
   position: absolute;
   transform: rotate(-10deg);
   top: 170px;
   right: 278px;
+}
+
+.game-over {
+  color: red;
+  font-size: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(190, 72, 72, 0.7);
+  z-index: 9;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+.game-over.active {
+  display: flex;
+}
+
+.pink{
+  background-color: pink;
 }
