--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 5px;
+  margin-top: 40px;
 }
 
 .game {
@@ -42,18 +43,31 @@ h1 {
   padding-bottom: 25px;
 }
 
+#game-topic {
+  color: #800000;
+  letter-spacing: 5px;
+}
+
 .gamer-tools {
+  margin-bottom: 40px;
+  height: auto;
 }
 
 .letter {
   text-transform: uppercase;
   cursor: pointer;
+  height: 40px;
+  width: 40px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
 .letters {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  gap: 5px;
+  gap: 8px;
   flex-wrap: wrap;
 }
 
@@ -62,7 +76,7 @@ h1 {
   justify-content: center;
   gap: 10px;
   padding-top: 25px;
-  padding-bottom: 25px;
+  padding-bottom: 40px;
 }
 
 .word-letter {
@@ -74,9 +88,10 @@ h1 {
   height: 25px;
   font-size: 35px;
   line-height: 30px;
+  color: #800000;
 }
 
-.gallows {
+.gallows-with-hangman {
   border: 1px solid black;
   height: 400px;
   flex-shrink: 0;
@@ -84,11 +99,11 @@ h1 {
   position: relative;
 }
 
-.gallows div {
+.gallows-with-hangman div {
   display: none;
 }
 
-#kran {
+#gallows {
   border-left: 2px solid black;
   border-top: 2px solid black;
   width: 250px;
@@ -96,7 +111,7 @@ h1 {
   position: relative;
 }
 
-#kran:after {
+#gallows:after {
   content: "";
   display: block;
   position: absolute;
@@ -163,14 +178,12 @@ h1 {
 }
 
 .game-over {
-  color: red;
-  font-size: 60px;
+  font-size: 40px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(190, 72, 72, 0.7);
   z-index: 9;
   display: none;
   justify-content: center;
@@ -182,6 +195,16 @@ h1 {
   display: flex;
 }
 
-.pink{
-  background-color: pink;
+.grey-letter {
+  background-color: rgb(187, 187, 187);
+}
+
+.green-success {
+  background-color: rgba(72, 190, 88, 0.7);
+  color: green;
+}
+
+.red-fail {
+  background-color: rgb(190, 72, 72, 0.7);
+  color: red;
 }
